@@ -27,7 +27,6 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.assertj.core.api.Fail;
 import org.junit.jupiter.api.Test;
@@ -40,7 +39,6 @@ import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
 import org.sonar.plugins.java.api.JavaFileScannerContext;
 import org.sonar.plugins.java.api.tree.Tree;
 
-import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.catchThrowable;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -581,7 +579,7 @@ class CheckVerifierTest {
       }
       List<AnalyzerMessage> anamyerMessages = preciseIssues.values().stream()
         .flatMap(List::stream)
-        .collect(Collectors.toList());
+        .toList();
       for (AnalyzerMessage analyzerMessage : anamyerMessages) {
         Double messageCost = analyzerMessage.getCost();
         Integer cost = messageCost != null ? messageCost.intValue() : null;
@@ -589,7 +587,7 @@ class CheckVerifierTest {
         if (!analyzerMessage.flows.isEmpty()) {
           List<List<JavaFileScannerContext.Location>> flows = analyzerMessage.flows.stream()
             .map(FakeVisitor::messagesToLocations)
-            .collect(toList());
+            .toList();
           context.reportIssueWithFlow(this, mockTree(analyzerMessage), analyzerMessage.getMessage(), flows, null);
         } else {
           reportIssue(mockTree(analyzerMessage), analyzerMessage.getMessage(), secLocations, cost);
@@ -601,7 +599,7 @@ class CheckVerifierTest {
     }
 
     private static List<JavaFileScannerContext.Location> messagesToLocations(List<AnalyzerMessage> flow) {
-      return flow.stream().map(m -> new JavaFileScannerContext.Location(m.getMessage(), mockTree(m))).collect(toList());
+      return flow.stream().map(m -> new JavaFileScannerContext.Location(m.getMessage(), mockTree(m))).toList();
     }
 
     private static Tree mockTree(final AnalyzerMessage analyzerMessage) {
