@@ -24,7 +24,6 @@ import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.sonar.check.Rule;
 import org.sonar.plugins.java.api.IssuableSubscriptionVisitor;
@@ -83,7 +82,7 @@ public class TwoLocksWaitCheck extends IssuableSubscriptionVisitor {
     tree.accept(synchronizedKeywordVisitor);
     return synchronizedKeywordVisitor.stream()
       .map(t -> new JavaFileScannerContext.Location("locking", t))
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private class MethodInvocationVisitor extends BaseTreeVisitor {
