@@ -20,7 +20,6 @@
 package org.sonar.java.checks.tests;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.sonar.check.Rule;
 import org.sonar.java.checks.helpers.MethodTreeUtils;
 import org.sonar.plugins.java.api.semantic.Symbol;
@@ -34,7 +33,7 @@ public class OneExpectedCheckedExceptionCheck extends AbstractOneExpectedExcepti
   void reportMultipleCallInTree(List<Type> expectedExceptions, Tree treeToVisit, Tree reportLocation, String placeToRefactor) {
     List<Type> checkedTypes = expectedExceptions.stream()
       .filter(AbstractOneExpectedExceptionRule::isChecked)
-      .collect(Collectors.toList());
+      .toList();
 
     if (checkedTypes.isEmpty()) {
       return;
