@@ -22,7 +22,6 @@ package org.sonar.java.model.expression;
 import java.io.File;
 import java.util.List;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 import org.sonar.java.model.JParserTestUtils;
 import org.sonar.plugins.java.api.tree.ClassTree;
@@ -133,7 +132,7 @@ class AssessableExpressionTreeTest {
       .map(MethodInvocationTree.class::cast)
       .map(m -> m.arguments().iterator().next())
       .map(resolver)
-      .collect(Collectors.toList());
+      .toList();
   }
 
 }
